Development
-----------
- mention MMC devices in pmount man page

0.9.8
-----
- Add reiser4 to the list of supported file systems.
- pmount-hal: fall back to plain volume.fstype and volume.label hal properties
  if policy does not exist; this makes pmount work with hal 0.5.7 and above
- pmount-hal: check for PMOUNT_DEBUG environment variable to enable debugging
- pmount: allow mounting of mmc cards
- updated translations from Rosetta

0.9.7
-----
- pmount: mount vfat with shortname=mixed option for better WinXP compatibility
- fix configure check to work with libsysfs versions 1.3 and 2.0
- pmount, pumount: do not link against dbus and hal libraries
- pmount, pumount: support --version argument
- pmount: automatically prepend /dev to device argument if it is missing

0.9.6
-----
- pmount-hal: support device argument
- pmount manpage: fix default mount options inconsistency
- pmount-hal: full support for HAL expored mount policy (including
  global and per-drive policy, and the "exec" option)
- autotoolized build system, thanks to Aaron Bockover
- pmount: fixed umask parsing, umask 000 works now
- pmount-hal: full support for storage devices to mount floppies and similar
  devices

0.9.5
-----
- pmount: Fix forgotten line break in debug output
- pmount: improve debugging of removability detection
- add README.devel with some VCS explanations
- pmount: atomically lock the mount point to avoid races with parallel
  pmount instances, and thus double-mounts to the same directory
- pmount-hal: gracefully handle pmount failures due to locked mount
  points
- pmount-hal: convert to use libhal-storage for better abstraction
- pmount-hal: if volume file system does not exist, fall back to
  storage file system
- pmount: Make read-only encrypted devices work; thanks to Sören
  Köpping for the patch
- updated translations with latest Rosetta data

0.9.4
-----
- policy.c: print out meaningful error message if compiling the
  regular expression fails